--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.koin:koin-core-ext:2.0.1"//getFullName
+    implementation 'org.koin:koin-android:2.0.1'//inject
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'//mvvm
+    implementation 'com.google.android.material:material:1.1.0-alpha10' //bottomNavi
 }
