--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "com.android.tools.build:gradle:4.1.3"
+        //fix An exception occurred applying plugin request [id: 'com.android.application']
+        // > Failed to apply plugin 'com.android.internal.application'.
+        // > Android Gradle plugin requires Java 11 to run. You are currently using Java 1.8.
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
 
         // NOTE: Do not place your application dependencies here; they belong
