--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'//binding
 }
 
 android {
@@ -44,4 +45,6 @@ dependencies {
     implementation 'org.koin:koin-android:2.0.1'//inject
     implementation 'org.koin:koin-android-viewmodel:2.0.1'//mvvm
     implementation 'com.google.android.material:material:1.1.0-alpha10' //bottomNavi
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'//listenClick
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
 }
