--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.philabnb.job_test">
-
-<!--  to launch need add application name-->
+    <uses-permission android:name="android.permission.INTERNET" />
+<!--  To launch app, need add application name -->
     <application
         android:name=".Base.MyApplication"
         android:allowBackup="true"
