--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha10' //bottomNavi
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0'//listenClick
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
